# app/Http/Resources/LoggedInUserResource.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\Resources;
 
+use App\Enums\TokenAbility;
 use App\Models\User;
 use Illuminate\Contracts\Support\Arrayable;
 use Illuminate\Http\Resources\Json\JsonResource;
@@ -11,8 +12,21 @@ use OpenApi\Attributes as OAT;
 #[OAT\Schema(
     schema: 'LoggedInUserResource',
     properties: [
-        new OAT\Property(property: 'user', type: 'object', ref: '#/components/schemas/UserResource'),
-        new OAT\Property(property: 'token', type: 'object', ref: '#/components/schemas/AccessTokenResource'),
+        new OAT\Property(
+            property: 'user',
+            type: 'object',
+            ref: '#/components/schemas/UserResource'
+        ),
+        new OAT\Property(
+            property: 'access_token',
+            type: 'object',
+            ref: '#/components/schemas/AccessTokenResource'
+        ),
+        new OAT\Property(
+            property: 'refresh_token',
+            type: 'object',
+            ref: '#/components/schemas/AccessTokenResource'
+        ),
     ]
 )]
 class LoggedInUserResource extends JsonResource
@@ -36,11 +50,13 @@ class LoggedInUserResource extends JsonResource
      */
     public function toArray($request): array|Arrayable|JsonSerializable
     {
-        $token = $this->user->createToken('auth-token');
+        $token = $this->user->createToken('access_token', [TokenAbility::ACCESS_API->value], now()->addMinutes(config('sanctum.expiration')));
+        $refreshToken = $this->user->createToken('refresh_token', [TokenAbility::ISSUE_ACCESS_TOKEN->value], now()->addMinutes(config('sanctum.rt_expiration')));
 
         return [
             'user' => new UserResource($this->user),
-            'token' => new AccessTokenResource($token),
+            'access_token' => new AccessTokenResource($token),
+            'refresh_token' => new AccessTokenResource($refreshToken),
         ];
     }
 }
